# cargo-m1

./: Cargo.toml
src/: main.rs
