[package]
name = "cargo-m1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "~2.33.3"
default-features = false
features = [ "suggestions", "color" ]
[dependencies.cargo]
version = "~0.56.0"